--- a/index.html
+++ b/index.html
@@ -3,9 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Blogger Custom Feed</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
-<body>
+<body class="dark-theme">
+    <header class="main-header">
+        <h1 class="logo">My Blogger Feed</h1>
+        <input type="text" id="search-input" placeholder="Search posts..." class="search-box">
+    </header>
     
+    <div id="posts-container" class="posts-container">
+        </div>
+
+    <div id="loading-spinner" class="loading-spinner">
+        <i class="fa-solid fa-spinner fa-spin"></i> Loading posts...
+    </div>
+
+    <div class="ad-container">
+        </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
